- Changes at otherusersDataAnalytics

--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -103,7 +103,7 @@
         <!--/span-->
     <!-- Popup-Info beim fertigen Durchlauf eines Shootouts --------------------->
         <div id="Infomodal" class="modal" >
-            <div style="margin-top: 10px" class="modalInfo-content">
+            <div style="margin-left: 300px" class="modalInfo-content">
                 <span class="close2" onclick="closeinfomodal()">&times;</span>
                 <div class="modal-header">
                     <h1 style="text-align: center"><i>You have completed the shootout.</i></h1>
