--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -186,11 +186,11 @@
 
 <h1>Frequently Asked Questions</h1>
 
-<button class="accordion">How can I create a klicks account?</button>
+<!--<button class="accordion">How can I create a klicks account?</button>
 <div class="panel">
     <p>To create an account, click on "Create Account". You have to enter a username, your e-mail address and your name, as well as a password.
     </p>
-</div>
+</div>-->
 
 
 <button class="accordion">Which usernames are acceptable on klicks?</button>
